[project]
name = "mcp-server-splunk"
version = "0.2.0"
description = "A Model Context Protocol server for Splunk - search, manage, and analyze Splunk data via LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "pahar0", email = "pahar0@users.noreply.github.com"}
]
keywords = ["mcp", "splunk", "llm", "ai", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "splunk-sdk>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-server-splunk = "splunk_mcp_server:main"

[project.urls]
Homepage = "https://github.com/pahar0/mcp-server-splunk"
Repository = "https://github.com/pahar0/mcp-server-splunk"
Issues = "https://github.com/pahar0/mcp-server-splunk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
